[package]
name = "rtbvh"
version = "0.5.1"
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "./README.md"
repository = "https://github.com/meirbon/rtbvh"
description = "BVH library with various build algorithms and high performance using packet traversal."
keywords = ["ray", "tracing", "bvh", "sah", "fast"]

[dependencies]
crossbeam = "0.8"
glam = { version = "0.14", features = ["serde"] }
num_cpus = "1.13"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"], optional = true }
num = "0.4"

[features]
default = []

[dev-dependencies]
l3d = "0.1"
rayon = "1.5"
bvh = "0.5"
winit = "0.24.0"
pixels = "0.2.0"
shared = { path = "shared" }

[profile.release]
lto = "thin"