[package]
name = "rtbvh_ffi"
version = "0.5.0"
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "rtbvh_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
rtbvh = { path = ".." }
glam = "0.14"
lazy_static = "1.4.0"
parking_lot = "0.11"

[build-dependencies]
cbindgen = "0.19"